graphql-parser/tests/snapshots/queries__query_var_default_string.snap
---
source: graphql-parser/tests/query_roundtrips.rs
expression: result
---
Ok(
    Document {
        definitions: [
            Operation(
                Query(
                    Query {
                        position: Pos(1:1),
                        name: Some(
                            "Foo",
                        ),
                        variable_definitions: [
                            VariableDefinition {
                                position: Pos(1:11),
                                name: "site",
                                var_type: NamedType(
                                    "String",
                                ),
                                default_value: Some(
                                    String(
                                        "string",
                                    ),
                                ),
                            },
                        ],
                        directives: [],
                        selection_set: SelectionSet {
                            span: (
                                Pos(1:37),
                                Pos(3:1),
                            ),
                            items: [
                                Field(
                                    Field {
                                        position: Pos(2:3),
                                        alias: None,
                                        name: "field",
                                        arguments: [],
                                        directives: [],
                                        selection_set: SelectionSet {
                                            span: (
                                                Pos(2:3),
                                                Pos(2:3),
                                            ),
                                            items: [],
                                        },
                                    },
                                ),
                            ],
                        },
                    },
                ),
            ),
        ],
    },
)
